--- a/app/views/cards/comments/reactions/_reactions.html.erb
+++ b/app/views/cards/comments/reactions/_reactions.html.erb
@@ -5,7 +5,12 @@
     </div>
 
     <%= turbo_frame_tag comment, :new_reaction do %>
-      <%= render "cards/comments/reactions/menu", comment: comment %>
+      <%= link_to new_card_comment_reaction_path(comment.card, comment), role: "button",
+            class: "btn btn--circle", action: "soft-keyboard#open",
+            data: { turbo_frame: dom_id(comment, :new_reaction), action: "dialog#close" } do %>
+        <%= icon_tag "reaction" %>
+        <span class="for-screen-reader">Add your own reaction</span>
+      <% end %>
     <% end %>
   </div>
 <% end %>
