--- a/app/views/events/index/_filter.html.erb
+++ b/app/views/events/index/_filter.html.erb
@@ -5,8 +5,8 @@
       data: { controller: "form", turbo_frame: "cards_container", turbo_action: "advance" } do |form| %>
   <%= tag.div class: "flex-inline position-relative quick-filter",
         data: {
-          controller: "dialog multi-selection-combobox",
-          action: "keydown.esc->dialog#close click@document->dialog#closeOnClickOutside turbo:morph@window->multi-selection-combobox#refresh",
+          controller: "dialog filter multi-selection-combobox",
+          action: "keydown.esc->dialog#close click@document->dialog#closeOnClickOutside turbo:morph@window->multi-selection-combobox#refresh dialog:close@document->filter#clearInput",
           filter_show: user_filtering.show_boards?,
           multi_selection_combobox_no_selection_label_value: user_filtering.selected_boards_label } do %>
         <button type="button" class="btn borderless btn--plain events__filter-select" data-action="click->dialog#toggle:stop">
