--- a/app/views/filters/settings/_assignees.html.erb
+++ b/app/views/filters/settings/_assignees.html.erb
@@ -1,8 +1,8 @@
 <% filter = user_filtering.filter %>
 <%= tag.div class: "quick-filter",
       data: {
-        controller: "dialog multi-selection-combobox",
-        action: "keydown.esc->dialog#close click@document->dialog#closeOnClickOutside",
+        controller: "dialog filter multi-selection-combobox",
+        action: "keydown.esc->dialog#close click@document->dialog#closeOnClickOutside dialog:close@document->filter#clearInput",
         filter_show: user_filtering.show_assignees?,
         multi_selection_combobox_no_selection_label_value: "Assigned to…",
         multi_selection_combobox_label_prefix_value: "Assigned to" } do %>
