--- a/app/views/filters/settings/_boards.html.erb
+++ b/app/views/filters/settings/_boards.html.erb
@@ -2,8 +2,8 @@
 
 <%= tag.div class: "quick-filter",
       data: {
-        controller: "dialog multi-selection-combobox",
-        action: "keydown.esc->dialog#close click@document->dialog#closeOnClickOutside",
+        controller: "dialog filter multi-selection-combobox",
+        action: "keydown.esc->dialog#close click@document->dialog#closeOnClickOutside dialog:close->filter#clearInput",
         filter_show: user_filtering.show_boards?,
         multi_selection_combobox_no_selection_label_value: "Board…",
         multi_selection_combobox_label_prefix_value: "" } do %>
