--- a/app/views/filters/settings/_tags.html.erb
+++ b/app/views/filters/settings/_tags.html.erb
@@ -2,8 +2,8 @@
 
 <%= tag.div class: "quick-filter",
       data: {
-        controller: "dialog multi-selection-combobox",
-        action: "keydown.esc->dialog#close click@document->dialog#closeOnClickOutside",
+        controller: "dialog filter multi-selection-combobox",
+        action: "keydown.esc->dialog#close click@document->dialog#closeOnClickOutside dialog:close@document->filter#clearInput",
         filter_show: user_filtering.show_tags?,
         multi_selection_combobox_no_selection_label_value: "Tagged…" } do %>
   <button type="button" class="btn input input--select flex-inline txt-x-small" data-action="click->dialog#toggle:stop">
